styles/global.css
body {
    background-color: #141418;
    color: white;
}

header a {
    color: inherit;
    text-decoration: inherit;
}
.header-icon img {
    height: 2rem;
    margin-right: 0.3rem;
    float: left;
}
.header-icon h2 {
    display: flex;
    margin: 0 1rem 0 0;
    text-shadow: rgba(255, 0, 0, 0.85) 1px 1px;
}
.header-tabs td h3 {
    margin: 0 1rem 0 1rem;
}
.header-tabs td {
    border-radius: 2rem;
}
.header-tabs td:hover {
    transition: 0.25s all;
    color: yellow;
    background: rgba(255, 255, 0, 0.1);
}

.divisor-gradient {
    background: linear-gradient(to right, yellow, red, red, blue, blue); 
    height: 0.15rem; 
    border: 0;
}

#pokemon-card-container {
    background-color: #161620;
    display: grid;
    grid-template-columns: 15vw 15vw 15vw 15vw 15vw 15vw;
    justify-content: center;
}
.pokemon-card {
    border-radius: 1rem;
    border-color: black;
    border-width: 1rem;
    margin: 0.75rem;
    background-color: #303042;
    text-align: center;
}
.pokemon-card a {
  color: inherit;
  text-decoration: none;
}
.pokemon-card a:hover {
  transition: ease-in 0.2s all;
  color: #ffff9a;
  text-shadow: #000000 0.2rem 0.2rem;
}
.pokemon-card img {
    border-radius: 2rem;
    margin: 0.5rem;
    margin-top: 1.25rem;
    width: 10vw;
    background-color: #404058;
}
.pokemon-card div input {
    margin-bottom: 1rem;
}
.fav-button {
    height: 1.75rem;
    width: 1.75rem;
    background-image: url('../public/fav-button.png');
    background-size: contain;
    margin-left: 2rem;
}
.fav-button:hover {
    transition: ease-in 0.2s all;
    height: 2.25rem;
    width: 2.25rem;
    margin-top: -0.4rem; 
    margin-right: -0.35rem;
}
.card-loading {
    height: 12rem;
    background-image: url('../public/throbber.png');
    background-position: center;
    background-repeat: no-repeat;
    background-size: 65%;
}

